@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-22T00:57:04Z",
+  "timestamp" : "2022-07-22T16:14:29Z",
   "count_outdated" : 430,
   "uniques_outdated" : 32,
-  "count" : 444,
-  "uniques" : 39,
+  "count" : 445,
+  "uniques" : 40,
   "views" : [
     {
       "timestamp": "2022-07-09T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
